# vortex_udlppl1

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
benchmark/: CMakeLists.txt  benchmark_client.cpp  benchmark_client.hpp  run_benchmark.cpp
benchmark/perf_data/: README.md  download_pipeline1.sh  perf_data
benchmark/perf_data/hnsw/: argparse.hpp  build_hnsw_index.cpp
benchmark/perf_data/pipeline1/index/test_experiment/indexes/test_index.nbits=8/: 0.metadata.json  doclens.0.json  metadata.json  plan.json
benchmark/pipeline_client/: http_web_client.py  log_client.py  monoClient.py  perf_test_setup.py  serialize_utils.py  stepABclient.py  stepAclient.py  stepBclient.py  stepEclient.py  web_client.py
benchmark/setup/hnsw/: build_hnsw_index.cpp
cfg/: dfgs.json.tmp  layout.json.tmp  udl_dlls.cfg.tmp
cfg/n0/: derecho.cfg
cfg/n1/: derecho.cfg
cfg/n10/: derecho.cfg
cfg/n11/: derecho.cfg
cfg/n12/: derecho.cfg
cfg/n2/: derecho.cfg
cfg/n3/: derecho.cfg
cfg/n4/: derecho.cfg
cfg/n5/: derecho.cfg
cfg/n6/: derecho.cfg
cfg/n7/: derecho.cfg
cfg/n8/: derecho.cfg
cfg/n9/: derecho.cfg
data/: CMakeLists.txt  README.md  faiss_knn.py  format_gist.py
data/perf_data/pipeline1/: prepare_FLMR.py
scripts/: install_FLMR.sh
vortex_udls/: CMakeLists.txt  aggregate_udl.cpp  clusters_search_udl.cpp  grouped_embeddings_for_search.cpp  grouped_embeddings_for_search.hpp
vortex_udls/python/: README.md  config.h.in  python_udl_manager.cpp
vortex_udls/python/python_udls/: TextEncoder.py  TransformerMappingNetwork.py  VisionEncoder.py  flush_log_udl.py  mono_flmr.py  monolithic.py  monolithic_udl.py  sample_udl.py  serialize_utils.py  step_C_modeling_mlp.py  stepa_udl.py  stepb_udl.py  stepd_udl.py  stepe_search.py  stepe_udl.py
